--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,8 +1,10 @@
 name: Daily README Update
+
 on:
   schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    - cron: '0 0 * * *'  # 매일 자정 UTC (한국시간 오전 9시)
+  workflow_dispatch:  # 수동 실행 버튼
+
 jobs:
   update:
     runs-on: ubuntu-latest
