--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -18,8 +18,8 @@ jobs:
         echo "## 🚀 Daily Progress (${PERCENT}%)" >> daily-log.md
         echo "**${DATE} KST**" >> daily-log.md
         echo "✅ Unity C#: Kitten's Dreamland 개발" >> daily-log.md
-        echo "✅ Notion 게임기획 문서 작성" >> daily-log.md
-        echo "✅ 정보처리기사 필기 공부" >> daily-log.md
+        echo "✅ Notion 게임기획 문서 작성 및 수정" >> daily-log.md
+        echo "✅ 정보처리기사 준비" >> daily-log.md
         echo "" >> daily-log.md
         echo "---" >> daily-log.md
         echo "*🦁 Seal-Lion Auto Update*" >> daily-log.md
