--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,7 +2,7 @@ name: Daily Log Update
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정 UTC (한국시간 오전 9시)
+    - cron: '0 15 * * *'  # 매일 15:00 UTC (한국시간 오전 12시)
   workflow_dispatch:  # 수동 실행 버튼
 
 jobs:
